--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Added semantic HTML elements and alt attributes -->
     <section>
    
-            <img src= "C:\Users\13039\Desktop\class-activities\01-HTML-Git-CSS\02-Homework\Develop\assets\images\digital-marketing-meeting.jpg" class="hero"  alt= "Digital Marketing"/>
+            <img src= "./images/digital-marketing-meeting.jpg" class="hero"  alt= "Digital Marketing"/>
     
     
     <!-- <div class="hero"></div> -->
